src/components/navbar.module.scss
.nav {
  height: 100vh;
  writing-mode: vertical-lr;
  vertical-align: middle;
  
}

.nav-list {
  display: flex;
  list-style: none;
  
  margin: 1rem;
  gap: 1rem;
}

.nav-item { 
  color: #999999;
  font-size: 0.9rem;
  text-decoration: none;
  transition: background 1s;
}

@mixin responsive-font($size, $min: $size, $max: $size) {
  $clamp-size: #{'min(max(#{$size}, #{$min}), #{$max})'};
  font-size: $clamp-size;
}

@media (max-width: 800px) {
  .nav {
    background-color: white;
    position: fixed;
    top: 90%;
    width: 100%;
    writing-mode: horizontal-tb;
    vertical-align: middle;
  }

  .nav-list {
    display: flex;
    list-style: none;
    
    text-align: center;
    justify-content: center;

    gap: 12vw;
  }

  .nav-item {
    @include responsive-font(4vw, 14px, 18px)
  }
}

@media (max-width: 500px) {

  .nav-list {
    gap: 8vw;
  }

}


.nav-item:hover {
  color: #454545;
}


.active-nav-item{
  color: black;
  font-weight: 500;
}

.under-construction-notice {
  color: #E94134;
  font-weight: 700;
}

